# UE4ImguiDumper

./: CMakeLists.txt  README.md  m.bat
include/Android_read/: Encrypt.h  ProcMem.h  StrucTure.h  SysRead.h  UnitInt.h  function.h  http.h
include/lua/: luaconf.h
include/native_surface/: utils.h
include/tools/: H264Decoder.h  main.h
my_android_opencv/: CMakeLists.txt
src/: lua.cpp  opencv.cpp  screenRecord.cpp  surface.cpp
src/source/Android_draw/: draw.cpp
src/source/ImGui/: imgui_demo.cpp
src/source/native_surface/: extern_function.cpp
src/source/tools/: H264Decode.cpp
src/test/: test.cpp  test1.cpp
